--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= PlayerName %></title>
+    <title>404</title>
 </head>
 <body>
-    <h1><%= PlayerPeripherals %></h1>
+    <center><h1>404 :c</h1></center>
 </body>
 </html>
