--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,7 +11,7 @@
         <form action="/register" method="POST">
         <input type="text" for="Username" name="Username" placeholder="Username.." required>
         <input type="text" for="Email" name="Email" type="Email" placeholder="email.." required>
-        <input type="text" for="Password" name="Password" required>
+        <input type="text" for="Password" name="Password" required placeholder="pasword...">
         <button type="submit"> Join Now!</button>
         </form>
     </center>
