--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -11,6 +11,11 @@
         <input type="text" for="Keyboard" name="Keyboard" placeholder="<%= userKeyboard.Keyboard %>">
         <button type="submit">Change</button>
         </form>
+        <br>
+        <form action="/changeHeadset" method="POST">
+        <input type="text" for="Headset" name="Headset" placeholder="<%= userHeadset.Headset %>">
+        <button type="Submit">Change</button>
+        </form>
     </center>
 </body>
 </html>
