--- a/views/viewUser.ejs
+++ b/views/viewUser.ejs
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title><%= PlayerName %></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/main.css">
+  </head>
 <body>
-    
+    <center>
+        <br>
+        <div class="card rounded shadow text-white bg-dark " style="border-radius:50px; width: 18rem;">
+            <div class="card-body">
+              <h4 class="card-title marginDown"><%= PlayerName %>'s Profile</h4>
+            </div>
+          </div>
+          <br><br><br>
+          <h2>Peripherals</h2>
+          <br>
+          <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Keyboard</h5>
+              <p class="card-text"><%= PlayerKeyboard.Keyboard %></p>
+            </div>
+          </div>
+
+          <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Headset</h5>
+              <p class="card-text"><%= PlayerHeadset.Headset %></p>
+            </div>
+          </div>
+
+          <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Mouse</h5>
+              <p class="card-text"><%= PlayerMouse.Mouse %></p>
+            </div>
+          </div>
+
+          <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Monitor</h5>
+              <p class="card-text"><%= PlayerMonitor.Monitor %></p>
+            </div>
+          </div>
+    </center>
 </body>
 </html>
