--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -3,27 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
-    <title><%= username %></title>
-</head>
-<body>
-    <center>
-
-        <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= username %></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/buttons.css">
   </head>
 <body>
     <center>
         <br>
         <div class="card rounded shadow text-white bg-dark " style="border-radius:50px; width: 18rem;">
             <div class="card-body">
-              <h4 class="card-title marginDown">Edit Profile</h4>
+              <h4 class="card-title marginDown"><%= username %>'s settings</h4>
+              <br>
+              <form action="/changeBio" method="POST">
+              <input type="text" for="Bio" name="Bio" class="changeKb" required placeholder="<%= userBio.Bio %>">
+              <br><br>
+              <button class="btn-hover color-11" type="submit">Change</button>
+              </form>
             </div>
           </div>
           <br><br><br>
@@ -32,10 +28,11 @@
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
                 <h5 class="card-title">Keyboard</h5>
+                <br>
                 <form action="/changeKeyboard" method="POST">
                     <input type="text" for="Keyboard" name="Keyboard" placeholder="<%= userKeyboard.Keyboard %>" class="changeKb" required>
                     <br><br>
-                    <button class="btn btn-success" type="submit">Change</button>
+                    <button class="btn-hover color-11" type="submit">Change</button>
                     </form>
             </div>
           </div>
@@ -43,10 +40,11 @@
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Headset</h5>
+              <br>
               <form action="/changeHeadset" method="POST">
                 <input type="text" for="Headset" name="Headset" placeholder="<%= userHeadset.Headset %>" class="changeKb" required>
                 <br><br>
-                <button class="btn btn-success" type="Submit">Change</button>
+                <button class="btn-hover color-11" type="Submit">Change</button>
                 </form>
             </div>
           </div>
@@ -54,10 +52,11 @@
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Mouse</h5>
+              <br>
               <form action="/changeMouse" method="POST">
               <input type="text" for="Mouse" name="Mouse" placeholder="<%= userMouse.Mouse %>" class="changeKb" required>
               <br><br>
-              <button class="btn btn-success" type="Submit">Change</button>
+              <button class="btn-hover color-11" type="Submit">Change</button>
               </form>
             </div>
           </div>
@@ -65,10 +64,11 @@
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Monitor</h5>
+              <br>
               <form action="/changeMonitor" method="POST">
               <input type="text" for="Monitor" name="Monitor" placeholder="<%= userMonitor.Monitor %>" class="changeKb" required>
                 <br><br>
-                <button type="submit" class="btn btn-success">Change</button>
+                <button type="submit" class="btn-hover color-11">Change</button>
             </form>
             </div>
           </div>
@@ -78,10 +78,11 @@
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Display Mode</h5>
+              <br>
               <form action="/changeDisplayMode" method="POST">
                 <input class="changeKb" type="text" for="DisplayMode" name="DisplayMode" placeholder="<%= userDisplayMode.DisplayMode %>" required>
                 <br><br>
-                <button class="btn btn-success" type="submit">Change</button>
+                <button class="btn-hover color-11" type="submit">Change</button>
                 </form>
               <p class="card-text"></p>
             </div>
@@ -90,10 +91,11 @@
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Frame Rate Limit</h5>
+              <br>
               <form action="/changeFrameRateLimit" method="POST">
                 <input type="text" class="changeKb" for="FrameRateLimit" name="FrameRateLimit" placeholder="<%= userFrameRateLimit.FrameRateLimit %>" required>
                 <br><br>
-                <button class="btn btn-success" type="submit">Change</button>
+                <button class="btn-hover color-11" type="submit">Change</button>
                 </form>
             </div>
           </div>
@@ -101,14 +103,17 @@
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Resolution</h5>
+              <br>
               <form action="/changeResolution" method="POST">
                 <input type="text" for="Resolution" class="changeKb" name="Resolution" placeholder="<%= userResolution.Resolution %>" required>
                 <br><br>
-                <button type="submit" class="btn btn-success">Change</button>
+                <button type="submit" class="btn-hover color-11">Change</button>
                 </form>
             </div>
           </div>
     </center>
+    <br><br><br><br>
+
 </body>
 </html>
     </center>
