--- a/views/viewUser.ejs
+++ b/views/viewUser.ejs
@@ -6,14 +6,15 @@
     <title><%= PlayerName %></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
-  </head>
+    <link rel="stylesheet" href="/css/buttons.css">
+    </head>
 <body>
     <center>
         <br>
         <div class="card rounded shadow text-white bg-dark " style="border-radius:50px; width: 18rem;">
             <div class="card-body">
               <h4 class="card-title marginDown"><%= PlayerName %></h4>
-              <p class="card-body">Been playing video games since i was 10, now i'm PRO @ Valorant.</p>
+              <p class="card-body"><%= PlayerBio.Bio %></p>
             </div>
           </div>
           <br><br><br>
@@ -22,28 +23,36 @@
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Keyboard</h5>
+              <br>
               <p class="card-text"><%= PlayerKeyboard.Keyboard %></p>
+              <button type="submit" class="btn-hover color-11" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerKeyboard.Keyboard %>'">Buy Link</button>
             </div>
           </div>
 
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Headset</h5>
+              <br>
               <p class="card-text"><%= PlayerHeadset.Headset %></p>
+              <button type="submit" class="btn-hover color-11" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerHeadset.Headset %>'">Buy Link</button>
             </div>
           </div>
 
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Mouse</h5>
+              <br>
               <p class="card-text"><%= PlayerMouse.Mouse %></p>
+              <button type="submit" class="btn-hover color-11" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMouse.Mouse %>'">Buy Link</button>
             </div>
           </div>
 
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Monitor</h5>
+              <br>
               <p class="card-text"><%= PlayerMonitor.Monitor %></p>
+              <button type="submit" class="btn-hover color-11" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMonitor.Monitor %>'">Buy Link</button>
             </div>
           </div>
           <br><br><br>
@@ -52,6 +61,7 @@
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Display Mode</h5>
+              
               <p class="card-text"><%= PlayerDisplayMode.DisplayMode %></p>
             </div>
           </div>
@@ -59,6 +69,7 @@
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Frame Rate Limit</h5>
+              
               <p class="card-text"><%= PlayerFrameRateLimit.FrameRateLimit %></p>
             </div>
           </div>
@@ -66,6 +77,7 @@
           <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Resolution</h5>
+              
               <p class="card-text"><%= PlayerResolution.Resolution %></p>
             </div>
           </div>
