--- a/views/viewUser.ejs
+++ b/views/viewUser.ejs
@@ -5,60 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= PlayerName %></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="/node_modules/animate.css/animate.min.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/buttons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/brands.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/regular.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/svg-with-js.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/v4-shims.min.css">
     </head>
 <body>
     <center>
         <br>
-        <div class="card rounded shadow text-white bg-dark " style="border-radius:50px; width: 18rem;">
+        <div class="card rounded shadow text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="border-radius:50px; width: 18rem;">
             <div class="card-body">
-              <h4 class="card-title marginDown"><%= PlayerName %></h4>
+              <h4 class="card-title marginDown"><%= PlayerName %> <% if (PlayerID.isVerified) { %> 
+                <i class="fas fa-check"></i>
+                <% } %>
+              </h4>
               <p class="card-body"><%= PlayerBio.Bio %></p>
             </div>
           </div>
           <br><br><br>
-          <h2>Peripherals</h2>
+          <h2 class="animate__animated animate__fadeInDown animate__fadeIn">Peripherals</h2>
           <br>
-          <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Keyboard</h5>
               <br>
               <p class="card-text"><%= PlayerKeyboard.Keyboard %></p>
-              <button type="submit" class="btn-hover color-11" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerKeyboard.Keyboard %>'">Buy Link</button>
+              <button type="submit" class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerKeyboard.Keyboard %>'">Buy Link</button>
             </div>
           </div>
 
-          <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Headset</h5>
               <br>
               <p class="card-text"><%= PlayerHeadset.Headset %></p>
-              <button type="submit" class="btn-hover color-11" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerHeadset.Headset %>'">Buy Link</button>
+              <button type="submit" class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerHeadset.Headset %>'">Buy Link</button>
             </div>
           </div>
 
-          <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Mouse</h5>
               <br>
               <p class="card-text"><%= PlayerMouse.Mouse %></p>
-              <button type="submit" class="btn-hover color-11" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMouse.Mouse %>'">Buy Link</button>
+              <button type="submit" class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMouse.Mouse %>'">Buy Link</button>
             </div>
           </div>
 
-          <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Monitor</h5>
               <br>
               <p class="card-text"><%= PlayerMonitor.Monitor %></p>
-              <button type="submit" class="btn-hover color-11" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMonitor.Monitor %>'">Buy Link</button>
+              <button type="submit" class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMonitor.Monitor %>'">Buy Link</button>
             </div>
           </div>
           <br><br><br>
-          <h2>Video Settings</h2>
+          <h2 class="animate__animated animate__fadeInDown animate__fadeIn">Video Settings</h2>
           <br>
-          <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Display Mode</h5>
               
@@ -66,7 +78,7 @@
             </div>
           </div>
 
-          <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Frame Rate Limit</h5>
               
@@ -74,11 +86,19 @@
             </div>
           </div>
 
-          <div class="card shadow rounded-3 text-white bg-dark " style="width: 20rem;">
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Resolution</h5>
               
               <p class="card-text"><%= PlayerResolution.Resolution %></p>
+            </div>
+          </div>
+
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Aspect Ratio</h5>
+              
+              <p class="card-text"><%= PlayerAspectRatio.AspectRatio %></p>
             </div>
           </div>
     </center>
