--- a/views/viewUser.ejs
+++ b/views/viewUser.ejs
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/svg-with-js.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/v4-shims.min.css">
+    <link rel="stylesheet" href="/node_modules/bootstrap-icons/icons/patch-check.svg">
     </head>
 <body>
     <center>
@@ -23,8 +24,10 @@
         <div class="card rounded shadow text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="border-radius:50px; width: 18rem;">
             <div class="card-body">
               <h4 class="card-title marginDown"><%= PlayerName %> <% if (PlayerCollection.isVerified == true )  { %> 
-                <i class="fas fa-check"></i>
-                <h1> Hello </h1>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-patch-check" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M10.273 2.513l-.921-.944.715-.698.622.637.89-.011a2.89 2.89 0 0 1 2.924 2.924l-.01.89.636.622a2.89 2.89 0 0 1 0 4.134l-.637.622.011.89a2.89 2.89 0 0 1-2.924 2.924l-.89-.01-.622.636a2.89 2.89 0 0 1-4.134 0l-.622-.637-.89.011a2.89 2.89 0 0 1-2.924-2.924l.01-.89-.636-.622a2.89 2.89 0 0 1 0-4.134l.637-.622-.011-.89a2.89 2.89 0 0 1 2.924-2.924l.89.01.622-.636a2.89 2.89 0 0 1 4.134 0l-.715.698a1.89 1.89 0 0 0-2.704 0l-.92.944-1.32-.016a1.89 1.89 0 0 0-1.911 1.912l.016 1.318-.944.921a1.89 1.89 0 0 0 0 2.704l.944.92-.016 1.32a1.89 1.89 0 0 0 1.912 1.911l1.318-.016.921.944a1.89 1.89 0 0 0 2.704 0l.92-.944 1.32.016a1.89 1.89 0 0 0 1.911-1.912l-.016-1.318.944-.921a1.89 1.89 0 0 0 0-2.704l-.944-.92.016-1.32a1.89 1.89 0 0 0-1.912-1.911l-1.318.016z"/>
+                  <path fill-rule="evenodd" d="M10.354 6.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+                </svg>
                 <% } %>
               </h4>
               <p class="card-body"><%= PlayerBio.Bio %></p>
@@ -38,7 +41,7 @@
               <h5 class="card-title">Keyboard</h5>
               <br>
               <p class="card-text"><%= PlayerKeyboard.Keyboard %></p>
-              <button type="submit" class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerKeyboard.Keyboard %>'">Buy Link</button>
+              <button type="submit" class="btn-hover color-3 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerKeyboard.Keyboard %>'">Buy Link</button>
             </div>
           </div>
 
@@ -47,7 +50,7 @@
               <h5 class="card-title">Headset</h5>
               <br>
               <p class="card-text"><%= PlayerHeadset.Headset %></p>
-              <button type="submit" class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerHeadset.Headset %>'">Buy Link</button>
+              <button type="submit" class="btn-hover color-3 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerHeadset.Headset %>'">Buy Link</button>
             </div>
           </div>
 
@@ -56,7 +59,7 @@
               <h5 class="card-title">Mouse</h5>
               <br>
               <p class="card-text"><%= PlayerMouse.Mouse %></p>
-              <button type="submit" class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMouse.Mouse %>'">Buy Link</button>
+              <button type="submit" class="btn-hover color-9 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMouse.Mouse %>'">Buy Link</button>
             </div>
           </div>
 
@@ -65,7 +68,7 @@
               <h5 class="card-title">Monitor</h5>
               <br>
               <p class="card-text"><%= PlayerMonitor.Monitor %></p>
-              <button type="submit" class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMonitor.Monitor %>'">Buy Link</button>
+              <button type="submit" class="btn-hover color-9 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMonitor.Monitor %>'">Buy Link</button>
             </div>
           </div>
           <br><br><br>
