--- a/views/viewUser.ejs
+++ b/views/viewUser.ejs
@@ -44,7 +44,6 @@
               <button type="submit" class="btn-hover color-3 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerKeyboard.Keyboard %>'">Buy Link</button>
             </div>
           </div>
-
           <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Headset</h5>
@@ -59,7 +58,7 @@
               <h5 class="card-title">Mouse</h5>
               <br>
               <p class="card-text"><%= PlayerMouse.Mouse %></p>
-              <button type="submit" class="btn-hover color-9 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMouse.Mouse %>'">Buy Link</button>
+              <button type="submit" class="btn-hover color-3 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMouse.Mouse %>'">Buy Link</button>
             </div>
           </div>
 
@@ -68,7 +67,7 @@
               <h5 class="card-title">Monitor</h5>
               <br>
               <p class="card-text"><%= PlayerMonitor.Monitor %></p>
-              <button type="submit" class="btn-hover color-9 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMonitor.Monitor %>'">Buy Link</button>
+              <button type="submit" class="btn-hover color-3 animate__animated animate__fadeInDown animate__fadeIn" onclick="window.location='https://www.amazon.com/search/s?k=<%= PlayerMonitor.Monitor %>'">Buy Link</button>
             </div>
           </div>
           <br><br><br>
@@ -105,6 +104,35 @@
               <p class="card-text"><%= PlayerAspectRatio.AspectRatio %></p>
             </div>
           </div>
+
+          <br><br>
+          <h2 class="animate__animated animate__fadeInDown animate__fadeIn">Crosshair Settings</h2>
+          <br>
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Color</h5>
+              <p class="card-text"><%= PlayerColor.Color %></p>
+            </div>
+          </div>
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Outlines</h5>
+              <p class="card-text">0 / 1 / 0 / 3</p>
+            </div>
+          </div>
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Inner Lines</h5>
+              <p class="card-text">1 / 6 / 2 / 3</p>
+            </div>
+          </div>
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title">Outer Lines</h5>
+              <p class="card-text">0 / 0 / 2 / 1</p>
+            </div>
+          </div>
+          <br><br><br>
     </center>
 </body>
 </html>
