--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -4,22 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= username %></title>
+    <script src="/node_modules/jquery.maskedinput/lib/jquery-1.9.0.min.js"></script>
+    <script src="/node_modules/jquery.maskedinput/src/jquery.maskedinput.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/buttons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   </head>
 <body>
+  
+<script type="text/javascript">
+  $document.ready(function($) {
+    $("color").mask("00 00 00 00", {placeholder: "XX XX XX XX"})
+  });
+  </script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <center>
         <br>
         <div class="card rounded shadow text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="border-radius:50px; width: 18rem;">
             <div class="card-body">
-              <h4 class="card-title marginDown"><%= username %>'s settings</h4>
+              <h4 class="card-title marginDown"><%= username %> <% if (userCollection.isVerified == true )  { %> 
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-patch-check" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M10.273 2.513l-.921-.944.715-.698.622.637.89-.011a2.89 2.89 0 0 1 2.924 2.924l-.01.89.636.622a2.89 2.89 0 0 1 0 4.134l-.637.622.011.89a2.89 2.89 0 0 1-2.924 2.924l-.89-.01-.622.636a2.89 2.89 0 0 1-4.134 0l-.622-.637-.89.011a2.89 2.89 0 0 1-2.924-2.924l.01-.89-.636-.622a2.89 2.89 0 0 1 0-4.134l.637-.622-.011-.89a2.89 2.89 0 0 1 2.924-2.924l.89.01.622-.636a2.89 2.89 0 0 1 4.134 0l-.715.698a1.89 1.89 0 0 0-2.704 0l-.92.944-1.32-.016a1.89 1.89 0 0 0-1.911 1.912l.016 1.318-.944.921a1.89 1.89 0 0 0 0 2.704l.944.92-.016 1.32a1.89 1.89 0 0 0 1.912 1.911l1.318-.016.921.944a1.89 1.89 0 0 0 2.704 0l.92-.944 1.32.016a1.89 1.89 0 0 0 1.911-1.912l-.016-1.318.944-.921a1.89 1.89 0 0 0 0-2.704l-.944-.92.016-1.32a1.89 1.89 0 0 0-1.912-1.911l-1.318.016z"/>
+                  <path fill-rule="evenodd" d="M10.354 6.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+                </svg>
+                <% } %></h4>
               <br>
               <form action="/changeBio" method="POST">
               <input type="text" for="Bio" name="Bio" class="changeKb animate__animated animate__fadeInDown animate__fadeIn" required placeholder="<%= userBio.Bio %>">
               <br><br>
-              <button class="btn-hover color-11" type="submit">Change</button>
+              <button class="btn-hover color-3" type="submit">Change</button>
               </form>
             </div>
           </div>
@@ -33,7 +47,7 @@
                 <form action="/changeKeyboard" method="POST">
                     <input type="text" for="Keyboard" name="Keyboard" placeholder="<%= userKeyboard.Keyboard %>" class="changeKb" required>
                     <br><br>
-                    <button class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn" type="submit">Change</button>
+                    <button class="btn-hover color-3 animate__animated animate__fadeInDown animate__fadeIn" type="submit">Change</button>
                     </form>
             </div>
           </div>
@@ -45,7 +59,7 @@
               <form action="/changeHeadset" method="POST">
                 <input type="text" for="Headset" name="Headset" placeholder="<%= userHeadset.Headset %>" class="animate__animated animate__fadeInDown animate__fadeIn changeKb" required>
                 <br><br>
-                <button class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn" type="Submit">Change</button>
+                <button class="btn-hover color-3 animate__animated animate__fadeInDown animate__fadeIn" type="Submit">Change</button>
                 </form>
             </div>
           </div>
@@ -57,7 +71,7 @@
               <form action="/changeMouse" method="POST">
               <input type="text" for="Mouse" name="Mouse" placeholder="<%= userMouse.Mouse %>" class="animate__animated animate__fadeInDown animate__fadeIn changeKb" required>
               <br><br>
-              <button class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn" type="Submit">Change</button>
+              <button class="btn-hover color-3 animate__animated animate__fadeInDown animate__fadeIn" type="Submit">Change</button>
               </form>
             </div>
           </div>
@@ -69,7 +83,7 @@
               <form action="/changeMonitor" method="POST">
               <input type="text" for="Monitor" name="Monitor" placeholder="<%= userMonitor.Monitor %>" class="animate__animated animate__fadeInDown animate__fadeIn changeKb" required>
                 <br><br>
-                <button type="submit" class="animate__animated animate__fadeInDown animate__fadeIn btn-hover color-11">Change</button>
+                <button type="submit" class="animate__animated animate__fadeInDown animate__fadeIn btn-hover color-3">Change</button>
             </form>
             </div>
           </div>
@@ -83,7 +97,7 @@
               <form action="/changeDisplayMode" method="POST">
                 <input class="changeKb animate__animated animate__fadeInDown animate__fadeIn" type="text" for="DisplayMode" name="DisplayMode" placeholder="<%= userDisplayMode.DisplayMode %>" required>
                 <br><br>
-                <button class="btn-hover color-11" type="submit">Change</button>
+                <button class="btn-hover color-3" type="submit">Change</button>
                 </form>
               <p class="card-text"></p>
             </div>
@@ -96,7 +110,7 @@
               <form action="/changeFrameRateLimit" method="POST">
                 <input type="text" class="animate__animated animate__fadeInDown animate__fadeIn changeKb" for="FrameRateLimit" name="FrameRateLimit" placeholder="<%= userFrameRateLimit.FrameRateLimit %>" required>
                 <br><br>
-                <button class="btn-hover color-11" type="submit">Change</button>
+                <button class="btn-hover color-3" type="submit">Change</button>
                 </form>
             </div>
           </div>
@@ -108,7 +122,7 @@
               <form action="/changeResolution" method="POST">
                 <input type="text" for="Resolution" class="animate__animated animate__fadeInDown animate__fadeIn changeKb" name="Resolution" placeholder="<%= userResolution.Resolution %>" required>
                 <br><br>
-                <button type="submit" class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn">Change</button>
+                <button type="submit" class="btn-hover color-3 animate__animated animate__fadeInDown animate__fadeIn">Change</button>
                 </form>
             </div>
           </div>
@@ -120,15 +134,29 @@
               <form action="/changeAspectRatio" method="POST">
                 <input type="text" for="AspectRatio" class="animate__animated animate__fadeInDown animate__fadeIn changeKb" name="AspectRatio" placeholder="<%= userAspectRatio.AspectRatio %>" required>
                 <br><br>
-                <button type="submit" class="btn-hover color-11 animate__animated animate__fadeInDown animate__fadeIn">Change</button>
+                <button type="submit" class="btn-hover color-3 animate__animated animate__fadeInDown animate__fadeIn">Change</button>
                 </form>
             </div>
           </div>
-
-    </center>
+          <br><br><br>
+          <h2>Crosshair Settings</h2>
+          <br><br>
+          <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
+            <div class="card-body">
+              <h5 class="card-title animate__animated animate__fadeInDown animate__fadeIn">Color</h5>
+              <br>
+              <form action="/changeColor" method="POST">
+                <input type="text" for="Color" class="color animate__animated animate__fadeInDown animate__fadeIn changeKb" name="Color" id="Color" required> 
+                <br><br>
+                <button type="submit" class="btn-hover color-3 animate__animated animate__fadeInDown animate__fadeIn">Change</button>
+                </form>
+            </div>
+          </div>
+          <br>
+        </center>
     <br><br><br><br>
-
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  </body>
 </html>
     </center>
 </body>
