--- a/views/viewUser.ejs
+++ b/views/viewUser.ejs
@@ -117,19 +117,19 @@
           <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Outlines</h5>
-              <p class="card-text">0 / 1 / 0 / 3</p>
+              <p class="card-text"><%= PlayerOutlines.Outlines %></p>
             </div>
           </div>
           <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Inner Lines</h5>
-              <p class="card-text">1 / 6 / 2 / 3</p>
+              <p class="card-text"><%= PlayerInnerLines.InnerLines %></p>
             </div>
           </div>
           <div class="card shadow rounded-3 text-white bg-dark animate__animated animate__fadeInDown animate__fadeIn" style="width: 20rem;">
             <div class="card-body">
               <h5 class="card-title">Outer Lines</h5>
-              <p class="card-text">0 / 0 / 2 / 1</p>
+              <p class="card-text"><%= PlayerOuterLines.OuterLines %></p>
             </div>
           </div>
           <br><br><br>
