--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -9,7 +9,7 @@
     <center>
         <form action="/login" method="POST">
         <input type="text" for="Username" name="Username" placeholder="Username..">
-        <input type="text" for="Password" name="Password" placeholder="Password..">
+        <input type="password" for="Password" name="Password" placeholder="Password..">
         <button type="Login">Login</button>
         </form>
     </center>
