--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,3 +62,10 @@ body {
 .nav-link {
     font-size:20px;
 }
+
+.changeKb:focus {
+    outline: none;
+}
+.changeKb:focus-within {
+    border:none;
+}
